Build Assets List API
